@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Include address groups in auto-completion list if address book is below AJAX lookup threshold.
 * [jan] Update French translation (Laurent Foucher &lt;laurent.foucher@iut-tlse3.fr&gt;).
 * [mms] Correctly remember form state when refreshing basic view compose page (Bug #11794).
 * [mms] Fix NOT criteria for custom header searches (Bug #11802).
@@ -2872,6 +2873,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Include address groups in auto-completion list if address book is below AJAX lookup threshold.
 * [jan] Update French translation (Laurent Foucher &lt;laurent.foucher@iut-tlse3.fr&gt;).
 * [mms] Correctly remember form state when refreshing basic view compose page (Bug #11794).
 * [mms] Fix NOT criteria for custom header searches (Bug #11802).
