@@ -2,6 +2,8 @@
 v6.0.3-git
 ----------
 
+[jan] Include address groups in auto-completion list if address book is below
+      AJAX lookup threshold.
 [jan] Update French translation (Laurent Foucher
       <laurent.foucher@iut-tlse3.fr>).
 [mms] Correctly remember form state when refreshing basic view compose page
